# screensaver-beams

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: local76-beams.desktop  local76-beams.xml  scene-beams.desktop  scene-beams.xml
scripts/: build.sh  release.sh  test.sh
src/: beams.rs  main.rs  screensaver_shim.rs  tests_perf.rs
src/beams/: beams_tests.rs  light.rs  mod.rs  physics.rs  physics_star.rs  types.rs
